# lifecycle_investing

./: .gitignore  README.md  pyproject.toml  simulations.ipynb  test.py
.ipynb_checkpoints/: simulations-checkpoint.ipynb
lc_investing/: backtest.py  birthday_rule.py  constant_percent_stock.py  constant_percent_stock_bonus_cohort.py  contributions.py  create_cohorts.py  lifecycle_strategy.py  margin_call_info.py  monthly_data.py  pe_multiplier.py  rwm.py  utils.py
lc_investing/data/: BTOP50_Index_historical_data.xls  FEDFUNDS.csv  HistoricalData_1666916195888.csv  S_P_500_Futures_Historical_Data.csv  contributions.csv  house_prices.csv  ie_data.xls  lifecycle_retirement_savings_before_period.csv  margin_call_info.csv  monthly_data.csv  pe_10.csv  pe_multiplier.csv  percentage_target.csv  real_returns.csv  socgen_trend_index_returns.xlsx
lc_investing/outputs/: quantstats-tearsheet.html  returns_distributions.paint
lifecycle_investing.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
outputs/: grid_search.csv
scripts/: backtest_1.ipynb  backtest_2.ipynb  corr_time_to_end.ipynb  futures_returns.ipynb  lifecycle_strategy.ipynb  modern_portfolio_theory.ipynb  replication.ipynb  retirement_accout_comparison.ipynb  returns_with_matrices.ipynb  sensitivity_analysis.ipynb  test.py  yahoo_data_backtesting.ipynb
scripts/.ipynb_checkpoints/: uncertainty_quantification-checkpoint.ipynb
tests/lc_investing/: tests_1.py
